--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,16 @@
+.custom-navbar {
+  height: 8vh;
+}
+
+.custom-navbrand {
+  font-weight: 700;
+}
+
 .logout-col {
   text-align: end;
+}
+
+.navBarButton {
+  background-color: #b7877b !important;
+  border: 1px solid #b7877b !important;
 }
