--- a/src/components/dashboard/NotesList.css
+++ b/src/components/dashboard/NotesList.css
@@ -1,9 +1,29 @@
+.noteList {
+  padding-bottom: 10%;
+}
+
 .noteCard:hover {
   cursor: pointer;
-  background-color: #bbb;
+  background-color: #ddd;
+  border: 1px solid #ddd;
 }
 
 .cardList {
   height: 50vh;
   overflow-y: scroll;
+}
+
+.cardList::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+.cardList::-webkit-scrollbar {
+  border-radius: 5px;
+  width: 12px;
+  background-color: #f5f5f5;
+}
+.cardList::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #1e4834;
 }
